best-practices/disallow-cri-sock-mount/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: myshell
    image: "ubuntu:18.04"
    command:
    - /bin/sleep
    - "300"
  volumes:
  - name: data
    hostPath:
      path: /data
