best-practices/disallow-cri-sock-mount/.chainsaw-test/pod-emptydir-vol.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-emptydir-volume
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    command:
    - sleep
    - "3600"
  volumes:
    - name: mydir
      emptyDir: {}
