best-practices/disallow-cri-sock-mount/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-cri-sock-mount
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../disallow-cri-sock-mount.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: good-pod.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-containerd-sock.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-docker-sock.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-crio-sock.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pod-cri-dockerd-sock.yaml
    - apply:
        file: pod-emptydir-vol.yaml
    - apply:
        file: pod-no-volumes.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: disallow-container-sock-mounts
